--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,9 +64,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/quiz.png
     - assets/pokemon_list.json
     - assets/pokeball.svg
     - assets/types_icons/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
