--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
+  skeletonizer: ^1.3.0
   
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
     - assets/pokemon_list.json
     - assets/pokeball.svg
     - assets/types_icons/
+    - assets/confetti.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
