--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
-  skeletonizer: ^1.3.0
+  hive: ^2.2.3
   
 dev_dependencies:
   flutter_test:
