--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -19,12 +20,17 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+
       - run: flutter pub get
+
+      - name: Copy theme.dart
+        run: cp path/to/your/theme.dart path/to/your/flutter/project/theme.dart
+
       - run: flutter build apk --release --split-per-abi
 
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*"
-          tag: v0.0.1
+          tag: v0.0.2
           token: ${{ secrets.TOKEN }}
