--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
-  hive: ^2.2.3
-  
+  sqflite: ^2.3.3+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
