--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -24,7 +24,8 @@ jobs:
       - run: flutter pub get
 
       - name: Copy theme.dart
-        run: cp path/to/your/theme.dart path/to/your/flutter/project/theme.dart
+        run: cp https://raw.githubusercontent.com/NinoZullo05/PokeFlutter/main/lib/Utils/theme.dart lib/Utils/theme.dart
+
 
       - run: flutter build apk --release --split-per-abi
 
