--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -1,33 +1,34 @@
+name: Pokeflutter Release
+
 on:
   push:
     branches:
       - main
-
-name: Pokeflutter Release
 
 jobs:
   build:
     name: Build and Release new apk
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-java@v2
+      - name: Setup Java
+        uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: '11'
 
-      - uses: subosito/flutter-action@v2
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
-      - run: flutter pub get
+      - name: Flutter pub get
+        run: flutter pub get
 
-      - name: Copy theme.dart
-        run: cp lib/Utils/theme.dart $GITHUB_WORKSPACE/lib/Utils/theme.dart
-
-
-      - run: flutter build apk --release --split-per-abi
+      - name: Build APK
+        run: flutter build apk --release --split-per-abi
 
       - name: Push to Releases
         uses: ncipollo/release-action@v1
