--- a/.github/workflows/flutter-workflow.yml
+++ b/.github/workflows/flutter-workflow.yml
@@ -41,4 +41,4 @@ jobs:
             build/app/outputs/apk/release/*
             build/app/outputs/apk/debug/*
           tag: v0.0.2
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
